docs: consolidate duplicate content between CLAUDE.md and README.md
From CLAUDE.md:
- Remove Java Runtime Requirements (keep in README)
- Remove Custom Annotations (keep in README)
- Remove Relationship Annotations (keep in README)
- Simplify Query Method Naming to reference docs/QUERY.md

From README.md:
- Remove Concurrency Model section (keep in CLAUDE)
- Remove Performance section (keep in CLAUDE)
- Remove code quality checks from Building section

Result:
- README.md: User-focused with Quick Start, Features, Usage, Requirements, Building
- CLAUDE.md: Developer-focused with Architecture, Design Principles, Testing Guidelines
- Clear separation of concerns with minimal duplication